employ_application_page.html

--- a/job_application_page.html
+++ b/job_application_page.html
@@ -1,97 +1,177 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التقدم للوظيفة - موقع التوظيف</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>إضافة موظف - شغلني</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
-            direction: rtl;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
+            font-family: 'Tajawal', sans-serif;
+            background-color: #f5f7fa;
         }
-        header {
-            background-color: #007BFF;
-            color: white;
-            padding: 20px;
-            text-align: center;
+
+        /* تصميم وسوم المهارات */
+        .skill-tag {
+            display: inline-flex;
+            align-items: center;
+            background-color: #eef2ff;
+            color: #4338ca;
+            padding: 0.25rem 0.75rem;
+            border-radius: 9999px;
+            font-size: 0.75rem;
+            margin: 0.125rem;
         }
-        form {
-            max-width: 600px;
-            margin: 50px auto;
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        form h2 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        form label {
-            display: block;
-            margin: 10px 0 5px;
-            color: #333;
-            font-weight: bold;
-        }
-        form input, form textarea, form button {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        form button {
-            background-color: #007BFF;
-            color: white;
-            font-size: 1em;
+
+        /* زر حذف الوسم */
+        .skill-tag button {
+            margin-right: 0.5rem;
+            background: none;
             border: none;
             cursor: pointer;
+            color: #4338ca;
+            font-weight: bold;
         }
-        form button:hover {
-            background-color: #0056b3;
-        }
-        .form-footer {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .form-footer a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-        .form-footer a:hover {
-            text-decoration: underline;
+
+        /* عرض معاينة الصور */
+        .image-preview {
+            width: 80px;
+            height: 80px;
+            object-fit: cover;
+            border-radius: 8px;
+            margin: 0.25rem;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>التقدم للوظيفة</h1>
-    </header>
-
-    <form action="#" method="post">
-        <h2>معلومات التقديم</h2>
-
-        <label for="name">الاسم الكامل:</label>
-        <input type="text" id="name" name="name" placeholder="أدخل اسمك الكامل" required>
-
-        <input type="tel" id="tel" name="tel"  placeholder="أكتب رقم هاتفك" required>
-        <label for="tel">رقم الهاتف :</label>
-
-        <label for="cv">السيرة الذاتية إن وجدت:</label>
-        <input type="file" id="cv" name="cv" >
-
-        <label for="cover-letter">رسالة تغطية:</label>
-        <textarea id="cover-letter" name="cover-letter" rows="5" placeholder="أدخل رسالة تغطية إن وجدت" required></textarea>
-
-        <button type="submit">تقديم الطلب</button>
-
-        <div class="form-footer">
-            <p>إذا كنت ترغب في التقديم لوظائف أخرى، يمكنك العودة إلى <a href="job_listing_page.html">الوظائف المتاحة</a></p>
+    <nav class="bg-white shadow sticky top-0 z-50">
+        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+            <div class="text-2xl font-bold text-blue-600">شغلني</div>
+            <a href="#" class="text-blue-600 hover:underline font-semibold">عرض الموظفين</a>
         </div>
-    </form>
-</body>
-</html>
+    </nav>
+
+    <main class="container mx-auto px-4 py-8">
+        <h1 class="text-3xl font-bold mb-6 text-blue-700">إضافة موظف جديد</h1>
+
+        <form id="employeeForm" class="bg-white p-6 rounded-xl shadow space-y-6" enctype="multipart/form-data">
+            <!-- الاسم -->
+            <div>
+                <label for="name" class="block mb-1 font-semibold">الاسم الكامل:</label>
+                <input type="text" id="name" name="name" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+            </div>
+
+            <!-- المسمى الوظيفي -->
+            <div>
+                <label for="jobTitle" class="block mb-1 font-semibold">المسمى الوظيفي:</label>
+                <input type="text" id="jobTitle" name="jobTitle" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+            </div>
+
+            <!-- المدينة -->
+            <div>
+                <label for="city" class="block mb-1 font-semibold">المدينة:</label>
+                <select id="city" name="city" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                    <option value="" disabled selected>اختر المدينة</option>
+                    <option>الخرطوم</option>
+                    <option>أم درمان</option>
+                    <option>بحري</option>
+                    <option>بورتسودان</option>
+                </select>
+            </div>
+
+            <!-- التخصص -->
+            <div>
+                <label for="specialization" class="block mb-1 font-semibold">التخصص:</label>
+                <select id="specialization" name="specialization" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                    <option value="" disabled selected>اختر التخصص</option>
+                    <option>تكنولوجيا المعلومات</option>
+                    <option>المالية والمحاسبة</option>
+                    <option>الهندسة</option>
+                    <option>التصميم</option>
+                    <option>عامل بناء</option>
+                </select>
+            </div>
+
+            <!-- سنوات الخبرة -->
+            <div>
+                <label for="experience" class="block mb-1 font-semibold">سنوات الخبرة:</label>
+                <input type="number" min="0" id="experience" name="experience" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+            </div>
+
+            <!-- المهارات -->
+            <div>
+                <label class="block mb-1 font-semibold">المهارات:</label>
+                <div class="flex items-center gap-2 mb-2">
+                    <input type="text" id="skillInput" placeholder="أدخل مهارة واضغط Enter"
+                        class="flex-1 border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+                    <button type="button" id="addSkillBtn"
+                        class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">أضف</button>
+                </div>
+                <div id="skillsContainer" class="flex flex-wrap"></div>
+            </div>
+
+            <!-- حالة التوظيف -->
+            <div>
+                <label for="status" class="block mb-1 font-semibold">حالة التوظيف:</label>
+                <select id="status" name="status" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                    <option value="" disabled selected>اختر الحالة</option>
+                    <option value="available">مُتاح</option>
+                    <option value="employed">موظف حالياً</option>
+                    <option value="unavailable">غير متاح</option>
+                </select>
+            </div>
+
+            <!-- السعر -->
+            <div>
+                <label for="price" class="block mb-1 font-semibold">السعر (مثلاً 1500-2000 جنيه):</label>
+                <input type="text" id="price" name="price" placeholder="مثلاً 1500 - 2000 جنيه" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" />
+            </div>
+
+            <!-- العنوان التفصيلي -->
+            <div>
+                <label for="address" class="block mb-1 font-semibold">العنوان التفصيلي:</label>
+                <textarea id="address" name="address" rows="3" required
+                    class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none"></textarea>
+            </div>
+
+            <!-- رفع الصورة الشخصية -->
+            <div>
+                <label class="block mb-1 font-semibold">الصورة الشخصية:</label>
+                <input type="file" id="profileImage" name="profileImage" accept="image/*" required
+                    class="w-full" />
+                <div id="profilePreview" class="mt-2"></div>
+            </div>
+
+            <!-- رفع صور الأعمال السابقة -->
+            <div>
+                <label class="block mb-1 font-semibold">صور الأعمال السابقة (يمكن اختيار أكثر من صورة):</label>
+                <input type="file" id="workImages" name="workImages" accept="image/*" multiple
+                    class="w-full" />
+                <div id="workPreview" class="mt-2 flex flex-wrap"></div>
+            </div>
+
+            <!-- زر الإرسال -->
+            <div class="text-left">
+                <button type="submit"
+                    class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 font-semibold flex items-center gap-2">
+                    <i class="fas fa-plus"></i> إضافة الموظف
+                </button>
+            </div>
+        </form>
+    </main>
+
+    <script>
+        // لإدارة مهارات الوسوم
+        const skillInput = document.getElementById('skillInput');
+        const addSkillBtn = document.getElementById('addSkillBtn');
+        const skillsContainer = document.getElementById('skillsContainer
