--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                
 
 
-                <a href="job_listing_page.html" class="px-4 py-2 text-blue-600 border border-blue-600 rounded-lg hover:bg-blue-50"> الوظائف المتاحة</a>  
+                <a href=employ.application.html" class="px-4 py-2 text-blue-600 border border-blue-600 rounded-lg hover:bg-blue-50"> إضافة  وظيف </a>  
 
 
 
